--- a/utilities/acceptance-tests/suites/CreateProperties/EditObjPropYearFounded.html
+++ b/utilities/acceptance-tests/suites/CreateProperties/EditObjPropYearFounded.html
@@ -105,7 +105,7 @@
 <tr>
 	<td>select</td>
 	<td>name=HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
-	<td>label=public</td>
+	<td>label=curator and above</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -120,7 +120,7 @@
 <!--Verify that changes took place-->
 <tr>
 	<td>verifyTextPresent</td>
-	<td>public</td>
+	<td>curator and above</td>
 	<td></td>
 </tr>
 <!--Log out-->
