--- a/utilities/acceptance-tests/suites/CreateClasses/AddSubClassHours.html
+++ b/utilities/acceptance-tests/suites/CreateClasses/AddSubClassHours.html
@@ -103,14 +103,24 @@
 	<td>Hours</td>
 </tr>
 <tr>
-	<td>select</td>
-	<td>HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
-	<td>label=site administrator</td>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>ProhibitedFromUpdateBelowRoleLevelUsingRoleUri</td>
-	<td>label=site administrator</td>
+	<td>name=HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
+	<td>label=site admin and root user</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=ProhibitedFromUpdateBelowRoleLevelUsingRoleUri</td>
+	<td>label=site admin and root user</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=HiddenFromPublishBelowRoleLevelUsingRoleUri</td>
+	<td>label=all users, including public</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -155,7 +165,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>site administrator</td>
+	<td>site admin and root user</td>
 	<td></td>
 </tr>
 <tr>
@@ -171,6 +181,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>http://vivo.mydomain.edu/individual/hours</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>all users, including public</td>
 	<td></td>
 </tr>
 <tr>
