--- a/utilities/acceptance-tests/suites/CreateClasses/AddSubClassMinutes.html
+++ b/utilities/acceptance-tests/suites/CreateClasses/AddSubClassMinutes.html
@@ -104,13 +104,18 @@
 </tr>
 <tr>
 	<td>select</td>
-	<td>HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
-	<td>label=editor, curator, site administrator</td>
+	<td>name=HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
+	<td>label=editor and above</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>ProhibitedFromUpdateBelowRoleLevelUsingRoleUri</td>
-	<td>label=editor, curator, site administrator</td>
+	<td>name=ProhibitedFromUpdateBelowRoleLevelUsingRoleUri</td>
+	<td>label=editor and above</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=HiddenFromPublishBelowRoleLevelUsingRoleUri</td>
+	<td>label=all users, including public</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -155,7 +160,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>editor, curator, site administrator</td>
+	<td>editor and above</td>
 	<td></td>
 </tr>
 <tr>
@@ -171,6 +176,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>http://vivo.mydomain.edu/individual/minutes</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>all users, including public</td>
 	<td></td>
 </tr>
 <tr>
