--- a/utilities/acceptance-tests/suites/CreateProperties/AddObjPropYearFounded.html
+++ b/utilities/acceptance-tests/suites/CreateProperties/AddObjPropYearFounded.html
@@ -150,12 +150,17 @@
 <tr>
 	<td>select</td>
 	<td>name=HiddenFromDisplayBelowRoleLevelUsingRoleUri</td>
-	<td>label=editor, curator, site administrator</td>
+	<td>label=editor and above</td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>name=ProhibitedFromUpdateBelowRoleLevelUsingRoleUri</td>
-	<td>label=site administrator</td>
+	<td>label=self-editor and above</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=HiddenFromPublishBelowRoleLevelUsingRoleUri</td>
+	<td>label=all users, including public</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -230,12 +235,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>editor, curator, site administrator</td>
+	<td>editor and above</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>site administrator</td>
+	<td>self-editor and above</td>
 	<td></td>
 </tr>
 <tr>
@@ -261,6 +266,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>http://purl.org/ontology/bibo/yearFounded</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>all users, including public</td>
 	<td></td>
 </tr>
 <!--Log out-->
