Holly made more test case changes...

--- a/utilities/acceptance-tests/suites/CustomAdvisesForm/CheckIndexView.html
+++ b/utilities/acceptance-tests/suites/CustomAdvisesForm/CheckIndexView.html
@@ -66,11 +66,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Faculty, Jane Assistant Professor</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Faculty, Jane</td>
 	<td></td>
@@ -122,7 +117,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Faculty, Jane Assistant Professor</td>
+	<td>Faculty, Jane Faculty Member</td>
 	<td></td>
 </tr>
 <tr>
