--- a/utilities/acceptance-tests/suites/CustomAdvisesForm/AddAdvises.html
+++ b/utilities/acceptance-tests/suites/CustomAdvisesForm/AddAdvises.html
@@ -92,8 +92,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[28]</td>
+	<td>xpath=(//img[@alt='add'])[29]</td>
 	<td></td>
 </tr>
 <tr>
@@ -154,7 +159,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[28]</td>
+	<td>xpath=(//img[@alt='add'])[29]</td>
 	<td></td>
 </tr>
 <tr>
@@ -275,7 +280,7 @@
 <!--Add a second advises, including all fields-->
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[28]</td>
+	<td>xpath=(//img[@alt='add'])[29]</td>
 	<td></td>
 </tr>
 <tr>
@@ -357,7 +362,7 @@
 <!--Add a third advises, exluding degree and end date-->
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='add'])[28]</td>
+	<td>xpath=(//img[@alt='add'])[29]</td>
 	<td></td>
 </tr>
 <tr>
