Changes to test cases to automate autocomplete function.

--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo2.html
@@ -204,7 +204,22 @@
 <tr>
 	<td>type</td>
 	<td>id=object</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
 	<td>southern afri</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -556,7 +571,22 @@
 <tr>
 	<td>type</td>
 	<td>id=object</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
 	<td>Librar</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
