--- a/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
@@ -132,8 +132,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForPageToLoad</td>
-	<td>20000</td>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -147,8 +147,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForPageToLoad</td>
-	<td>20000</td>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -322,8 +322,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForPageToLoad</td>
-	<td>20000</td>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -337,8 +337,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForPageToLoad</td>
-	<td>20000</td>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -1238,7 +1238,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Organization (1)</td>
+	<td>Organization (2)</td>
 	<td></td>
 </tr>
 <tr>
@@ -1787,11 +1787,6 @@
 	<td></td>
 </tr>
 <!--Delete research section-->
-<tr>
-	<td>selectWindow</td>
-	<td>null</td>
-	<td></td>
-</tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Award or Honor</td>
@@ -3123,6 +3118,16 @@
 	<td></td>
 </tr>
 <!--Verify deletions and remainders-->
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>refresh</td>
+	<td></td>
+	<td></td>
+</tr>
 <tr>
 	<td>verifyTextPresent</td>
 	<td>people</td>
