--- a/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
@@ -107,7 +107,12 @@
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
+	<td>assertConfirmation</td>
+	<td>Are you sure you want to remove this term?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
 	<td>5000</td>
 	<td></td>
 </tr>
