Holly made more test case changes for autocomplete functions

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
@@ -181,7 +181,22 @@
 <tr>
 	<td>type</td>
 	<td>id=organization</td>
-	<td>primate colleges of the </td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=organization</td>
+	<td>primate colleges of the wor</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=organization</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -397,7 +412,22 @@
 <tr>
 	<td>type</td>
 	<td>id=object</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
 	<td>Afri</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -515,7 +545,22 @@
 <tr>
 	<td>type</td>
 	<td>id=object</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
 	<td>primate health chec</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
