--- a/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
@@ -3168,11 +3168,8 @@
 	<td>organizations</td>
 	<td></td>
 </tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>research</td>
-	<td></td>
-</tr>
+<!--Had to remove following code because of Research menu-->
+<!--verifyTextNotPresent research-->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>locations</td>
