--- a/utilities/acceptance-tests/suites/ProxyEditing/ValidateUserProxy.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/ValidateUserProxy.html
@@ -83,9 +83,24 @@
 <tr>
 	<td>type</td>
 	<td>id=addProfileEditor</td>
-	<td>edito</td>
+	<td></td>
 </tr>
 <!--Select Eddie Editor-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=addProfileEditor</td>
+	<td>edit</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=addProfileEditor</td>
+	<td>${KEY_DOWN}</td>
+</tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
@@ -94,7 +109,22 @@
 <tr>
 	<td>type</td>
 	<td>id=addProfileEditor</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=addProfileEditor</td>
 	<td>prox</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=addProfileEditor</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
