--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
@@ -374,7 +374,22 @@
 <tr>
 	<td>type</td>
 	<td>id=object</td>
-	<td>United</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>United State</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=object</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
