--- a/utilities/acceptance-tests/suites/ProxyEditing/CreateNewSelfEditorUser.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/CreateNewSelfEditorUser.html
@@ -118,7 +118,22 @@
 <tr>
 	<td>type</td>
 	<td>id=associateProfileName</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=associateProfileName</td>
 	<td>facult</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=associateProfileName</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
