--- a/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
@@ -113,18 +113,33 @@
 </tr>
 <!--Select profile, but not editor-->
 <tr>
+	<td>click</td>
+	<td>name=createRelationship</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>//form[@id='add-relation']/fieldset[2]/section/input</td>
-	<td>facult</td>
+	<td>id=selectProfiles</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>facul</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>name=createRelationship</td>
 	<td></td>
 </tr>
 <tr>
@@ -141,9 +156,24 @@
 <tr>
 	<td>type</td>
 	<td>id=selectProfileEditors</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
 	<td>edito</td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
 <!--Select Eddie Editor-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
+	<td>${KEY_DOWN}</td>
+</tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
@@ -168,9 +198,24 @@
 <tr>
 	<td>type</td>
 	<td>id=selectProfileEditors</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
 	<td>edito</td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
 <!--Select Eddie Editor-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
+	<td>${KEY_DOWN}</td>
+</tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
@@ -188,12 +233,32 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//form[@id='add-relation']/fieldset[2]/section/input</td>
-	<td>facult</td>
+	<td>id=selectProfiles</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>facul</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -226,9 +291,24 @@
 <tr>
 	<td>type</td>
 	<td>id=selectProfileEditors</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
 	<td>edito</td>
 </tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
 <!--Select Eddie Editor-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
+	<td>${KEY_DOWN}</td>
+</tr>
 <tr>
 	<td>click</td>
 	<td>id=ui-active-menuitem</td>
@@ -257,8 +337,23 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//form[@id='add-relation']/fieldset[2]/section/input</td>
-	<td>facult</td>
+	<td>id=selectProfiles</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>facul</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -325,7 +420,23 @@
 <tr>
 	<td>type</td>
 	<td>id=selectProfileEditors</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
 	<td>edito</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<!--Select Eddie Editor-->
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfileEditors</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -334,8 +445,23 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//form[@id='add-relation']/fieldset[2]/section/input</td>
-	<td>facult</td>
+	<td>id=selectProfiles</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>facul</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=selectProfiles</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -355,7 +481,17 @@
 <tr>
 	<td>type</td>
 	<td>id=addProfile</td>
-	<td>facult</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=addProfile</td>
+	<td>facul</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
