--- a/utilities/acceptance-tests/suites/SelfEditing/AddSelfEditorId2.html
+++ b/utilities/acceptance-tests/suites/SelfEditing/AddSelfEditorId2.html
@@ -165,7 +165,22 @@
 <tr>
 	<td>type</td>
 	<td>id=associateProfileName</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=associateProfileName</td>
 	<td>Facu</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=associateProfileName</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
