Holly's final (she hopes) test case changes for RC4...

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/TestMenuManagement.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/TestMenuManagement.html
@@ -665,21 +665,6 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=County (1)</td>
-	<td></td>
-</tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=Mozamia</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
 	<td>link=Facility (5)</td>
 	<td></td>
 </tr>
@@ -755,6 +740,36 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertConfirmation</td>
+	<td>Are you sure you wish to delete this page:&nbsp;&nbsp;Activities?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Pages</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Site Admin</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Page management</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertTitle</td>
 	<td>Pages</td>
 	<td></td>
@@ -772,6 +787,26 @@
 <tr>
 	<td>waitForPageToLoad</td>
 	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Pages</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Site Admin</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Page management</td>
 	<td></td>
 </tr>
 <tr>
@@ -800,6 +835,26 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=Site Admin</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Page management</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Pages</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>xpath=(//img[@alt='delete this page'])[7]</td>
 	<td></td>
@@ -812,6 +867,26 @@
 <tr>
 	<td>waitForPageToLoad</td>
 	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Pages</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Site Admin</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>VIVO Site Administration</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Page management</td>
 	<td></td>
 </tr>
 <tr>
