--- a/utilities/acceptance-tests/suites/AddPublications/DeleteValidationStuff.html
+++ b/utilities/acceptance-tests/suites/AddPublications/DeleteValidationStuff.html
@@ -299,12 +299,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Kids Now!</td>
+	<td>link=Focus on Kids!</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Kids Now!</td>
+	<td>Focus on Kids!</td>
 	<td></td>
 </tr>
 <tr>
@@ -560,12 +560,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Kids Now!</td>
+	<td>link=Focus on Kids Too!</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Kids Now!</td>
+	<td>Focus on Kids Too!</td>
 	<td></td>
 </tr>
 <tr>
@@ -860,12 +860,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Kids Now!</td>
+	<td>link=Focus on Kids Project</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Kids Now!</td>
+	<td>Focus on Kids Project</td>
 	<td></td>
 </tr>
 <tr>
