--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
@@ -105,7 +105,22 @@
 <tr>
 	<td>type</td>
 	<td>id=grant</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
 	<td>Future of</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -176,7 +191,22 @@
 <tr>
 	<td>type</td>
 	<td>id=grant</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
 	<td>Nix N</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -241,7 +271,22 @@
 <tr>
 	<td>type</td>
 	<td>id=grant</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
 	<td>Nix N</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=grant</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
