--- a/utilities/acceptance-tests/suites/CustomAwardsForm/ChangeAwards.html
+++ b/utilities/acceptance-tests/suites/CustomAwardsForm/ChangeAwards.html
@@ -211,7 +211,7 @@
 <!--Remove year but add year range to Primate Expert award-->
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='edit this entry'])[5]</td>
+	<td>xpath=(//img[@alt='edit this entry'])[4]</td>
 	<td></td>
 </tr>
 <tr>
@@ -290,10 +290,15 @@
 	<td>link=Primates-R-Us</td>
 	<td></td>
 </tr>
-<!--Remove the year for the last award-->
+<!--Remove the year for the Professor of the Decade award-->
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='edit this entry'])[5]</td>
+	<td>css=a.edit-relatedBy &gt; img.edit-individual</td>
 	<td></td>
 </tr>
 <tr>
