--- a/utilities/acceptance-tests/suites/SelfEditing/CreateNewSelfEditorUser.html
+++ b/utilities/acceptance-tests/suites/SelfEditing/CreateNewSelfEditorUser.html
@@ -123,7 +123,7 @@
 <tr>
 	<td>sendKeys</td>
 	<td>id=associateProfileName</td>
-	<td>Facul</td>
+	<td>Faculty, Ja</td>
 </tr>
 <tr>
 	<td>pause</td>
