--- a/utilities/acceptance-tests/suites/AddPublications/AddArticle.html
+++ b/utilities/acceptance-tests/suites/AddPublications/AddArticle.html
@@ -359,7 +359,22 @@
 <tr>
 	<td>type</td>
 	<td>id=relatedIndLabel</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=relatedIndLabel</td>
 	<td>Child</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=relatedIndLabel</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
