--- a/utilities/acceptance-tests/suites/CheckVisualizations/TestTemporalGraphs.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/TestTemporalGraphs.html
@@ -134,7 +134,22 @@
 <tr>
 	<td>type</td>
 	<td>id=person</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
 	<td>Furter</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -184,7 +199,22 @@
 <tr>
 	<td>type</td>
 	<td>id=person</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
 	<td>John</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -234,7 +264,22 @@
 <tr>
 	<td>type</td>
 	<td>id=person</td>
-	<td>smith</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>Smith</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -284,7 +329,22 @@
 <tr>
 	<td>type</td>
 	<td>id=person</td>
-	<td>zink</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>Zink</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=person</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -361,6 +421,11 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Organizations</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
@@ -622,9 +687,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>selectAndWait</td>
+	<td>select</td>
 	<td>//div[@id='leftUpper']/div/select</td>
 	<td>label=by Grants</td>
+</tr>
+<tr>
+	<td>pause 10000</td>
+	<td></td>
+	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
@@ -920,6 +990,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertTitle</td>
 	<td>Organizations</td>
 	<td></td>
@@ -947,6 +1022,11 @@
 <tr>
 	<td>verifyElementPresent</td>
 	<td>id=organizationMoniker</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
