--- a/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
@@ -167,13 +167,18 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=showAddForm</td>
+	<td>assertConfirmation</td>
+	<td>Are you sure you want to remove this web page?</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Edit</td>
+	<td>waitForPageToLoad</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=showAddForm</td>
 	<td></td>
 </tr>
 <tr>
@@ -795,26 +800,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Faculty, Jane</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>css=a.delete-relatedBy &gt; img.delete-individual</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Edit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=submit</td>
 	<td></td>
 </tr>
 <tr>
