--- a/utilities/acceptance-tests/suites/CustomAwardsForm/AddAwards.html
+++ b/utilities/acceptance-tests/suites/CustomAwardsForm/AddAwards.html
@@ -219,7 +219,22 @@
 <tr>
 	<td>type</td>
 	<td>id=org</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=org</td>
 	<td>Carr</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=org</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
