--- a/utilities/acceptance-tests/suites/ProxyEditing/DeleteNewUsers.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/DeleteNewUsers.html
@@ -119,7 +119,7 @@
 </tr>
 <tr>
 	<td>assertConfirmation</td>
-	<td>Are you sure you want to delete these accounts??</td>
+	<td>Are you sure you want to delete this account??</td>
 	<td></td>
 </tr>
 <tr>
@@ -150,7 +150,7 @@
 </tr>
 <tr>
 	<td>assertConfirmation</td>
-	<td>Are you sure you want to delete these accounts??</td>
+	<td>Are you sure you want to delete this account??</td>
 	<td></td>
 </tr>
 <tr>
@@ -176,7 +176,7 @@
 </tr>
 <tr>
 	<td>assertConfirmation</td>
-	<td>Are you sure you want to delete these accounts??</td>
+	<td>Are you sure you want to delete this account??</td>
 	<td></td>
 </tr>
 <tr>
