--- a/utilities/acceptance-tests/suites/ShortViews/CreateTestPeople.html
+++ b/utilities/acceptance-tests/suites/ShortViews/CreateTestPeople.html
@@ -195,7 +195,22 @@
 <tr>
 	<td>type</td>
 	<td>id=activity</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=activity</td>
 	<td>Depart</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=activity</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -282,7 +297,22 @@
 <tr>
 	<td>type</td>
 	<td>id=activity</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=activity</td>
 	<td>Depart</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=activity</td>
+	<td>${KEY_DOWN}</td>
 </tr>
 <tr>
 	<td>click</td>
