--- a/utilities/acceptance-tests/suites/LinkedOpenData/Suite.html
+++ b/utilities/acceptance-tests/suites/LinkedOpenData/Suite.html
@@ -9,10 +9,11 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="RebuildSearchIndex.html">RebuildSearchIndex</a></td></tr>
+<tr><td><a href="AddTestRDF.html">AddTestRDF</a></td></tr>
 <tr><td><a href="TestUserCreated.html">TestUserCreated</a></td></tr>
 <tr><td><a href="TestVariousRequests.html">TestVariousRequests</a></td></tr>
 <tr><td><a href="CheckDataHiding.html">CheckDataHiding</a></td></tr>
-<tr><td><a href="TestRDFAccept.html">TestRDFAccept</a></td></tr>
+<tr><td><a href="RemoveTestRDF.html">RemoveTestRDF</a></td></tr>
 </tbody></table>
 </body>
 </html>
