--- a/utilities/acceptance-tests/testApp/TestListRDF.html
+++ b/utilities/acceptance-tests/testApp/TestListRDF.html
@@ -3,7 +3,7 @@
 <script src="js/jquery.js"></script>
 
 <script>
-function TestSparql() {
+function TestListRdf() {
 	self = this;
 	
 	this.setup = setupButtons;
@@ -12,18 +12,16 @@ function TestSparql() {
 	    document.getElementById("submit_button").onclick = function() {
 			requestWithAcceptHeader(
 					$("#acceptHeader").val(), 
-					$("#email").val(), 
-					$("#password").val(), 
-					$("#query").val());
+					$("#vclass").val());
 	    }
 	}
 
-	function requestWithAcceptHeader(mimetype, email, password, query) {
+	function requestWithAcceptHeader(mimetype, vclass) {
 		var parms = {
-			type: "POST",
-	        url: "/vivo/api/sparqlQuery",
+			type: "GET",
+	        url: "/vivo/listrdf",
 	        headers: {Accept: mimetype}, 
-	        data: {query: query, email: email, password: password},
+	        data: {vclass: vclass},
 	        dataType: "text",
 	        complete: displayResult
 	    };
@@ -38,29 +36,21 @@ function TestSparql() {
 }
 
 $(document).ready(function() {   
-	new TestSparql().setup();	
+	new TestListRdf().setup();	
 }); 
 </script>
 
-<h1>Test the SPARQL Query API</h1>
+<h1>Test the List RDF API</h1>
 
 <h3>Request data</h3>
 <table>
-	<tr>
-		<td>User email</td>
-		<td><input type="text" size="25" id="email"></td>
-	</tr>
-	<tr>
-		<td>User password</td>
-		<td><input type="password" size="15" id="password"></td>
-	</tr>
 	<tr>
 		<td>Accept header</td>
 		<td><input type="text" size="40" id="acceptHeader"></td>
 	</tr>
 	<tr>
-		<td>Query text</td>
-		<td><textarea cols="60" rows="10" id="query"></textarea></td>
+		<td>VClass URI</td>
+		<td><input type="text" size="80" id="vclass"></td>
 	</tr>
 	<tr>
 		<td><input type="submit" value="submit the request" id="submit_button"></td>
