Holly made first batch of test case changes for release 1.7 rc 1.

--- a/utilities/acceptance-tests/suites/AdminSecurity/NewAdminCheckPrivileges.html
+++ b/utilities/acceptance-tests/suites/AdminSecurity/NewAdminCheckPrivileges.html
@@ -1231,7 +1231,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Format for SELECT query results:</td>
+	<td>Format for SELECT and ASK query results:</td>
 	<td></td>
 </tr>
 <tr>
@@ -1478,21 +1478,6 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>VIVO is running in developer mode. (click for Options)</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=developerPanelClickText</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=developerEnabled</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=developerPanelSaveButton</td>
 	<td></td>
 </tr>
 <tr>
