Holly made another batch of test case changes for release 1.7, rc 1.

--- a/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/AddFacultyInfo.html
@@ -691,7 +691,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Reactions</td>
+	<td>label=Primate Reactions (Case Study)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
