--- a/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/DeleteFacultyInfo.html
@@ -1160,7 +1160,7 @@
 	<td>Faculty, Jane</td>
 	<td></td>
 </tr>
-<!--Veirfy Index stuff-->
+<!--Verify Index stuff-->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Index</td>
@@ -1238,7 +1238,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Organization (2)</td>
+	<td>Organization (1)</td>
 	<td></td>
 </tr>
 <tr>
