--- a/utilities/acceptance-tests/suites/CreatePeople/UploadNonPersonImage.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/UploadNonPersonImage.html
@@ -398,6 +398,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertConfirmation</td>
+	<td>Are you sure you want to delete this photo?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertTitle</td>
 	<td>Germany</td>
 	<td></td>
