More test case changes from 1.7 rc 1 by Holly.

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateActivity.html
@@ -231,7 +231,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primate Research Laboratory</td>
+	<td>label=Primate Research Laboratory (Laboratory)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -291,7 +291,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primate Colleges of the World</td>
+	<td>label=Primate Colleges of the World (Consortium)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -696,7 +696,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Info</td>
+	<td>label=Primate Info (Database)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
