--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateOrganization.html
@@ -211,7 +211,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=B.S. Bachelor of Science</td>
+	<td>label=B.S. Bachelor of Science (Academic Degree)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -637,7 +637,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primates-r-us</td>
+	<td>label=Primates-r-us (Company)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1349,7 +1349,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Happenings</td>
+	<td>label=Primate Happenings (Blog Posting)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
