--- a/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
+++ b/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
@@ -194,7 +194,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>click</td>
 	<td>xpath=(//input[@type='checkbox'])[6]</td>
 	<td></td>
 </tr>
