--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddCoAuthors.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddCoAuthors.html
@@ -197,11 +197,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Edit</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>id=returnLink</td>
 	<td></td>
@@ -346,7 +341,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=(GraphML File)</td>
+	<td>link=GraphML file</td>
 	<td></td>
 </tr>
 <tr>
