--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddPublications.html
@@ -836,13 +836,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=(GraphML File)</td>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=(GraphML File)</td>
+	<td>link=GraphML file</td>
 	<td></td>
 </tr>
 <tr>
