--- a/utilities/acceptance-tests/suites/CheckVisualizations/TestTemporalGraphs.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/TestTemporalGraphs.html
@@ -692,11 +692,6 @@
 	<td>label=by Grants</td>
 </tr>
 <tr>
-	<td>pause 10000</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
 	<td>assertTitle</td>
 	<td>Child Development - Temporal Graph Visualization</td>
 	<td></td>
@@ -920,7 +915,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Child Development</td>
+	<td>label=Child Development (Department)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
