--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateCourse.html
@@ -361,7 +361,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primate Health Check</td>
+	<td>label=Primate Health Check (Event)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -436,7 +436,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Health and Fitness</td>
+	<td>label=Primate Health and Fitness (Invited Talk)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -557,7 +557,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Happenings</td>
+	<td>label=Primate Happenings (Blog Posting)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
