--- a/utilities/acceptance-tests/suites/AddRoles/AddFacultyMemberRoles2.html
+++ b/utilities/acceptance-tests/suites/AddRoles/AddFacultyMemberRoles2.html
@@ -1028,6 +1028,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Prototype New Ape Home</td>
 	<td></td>
