--- a/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
+++ b/utilities/acceptance-tests/suites/ProxyEditing/ValidateAdminProxy.html
@@ -361,6 +361,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Remove selection</td>
 	<td></td>
