Another commit for rc 1 test case changes from Holly.

--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateLocation.html
@@ -288,7 +288,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Heart Health</td>
+	<td>label=Primate Heart Health (Service)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -313,7 +313,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate University of America</td>
+	<td>label=Primate University of America (University)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -338,7 +338,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Health Check</td>
+	<td>label=Primate Health Check (Event)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
