--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEquipment.html
@@ -181,7 +181,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primate Research Laboratory</td>
+	<td>label=Primate Research Laboratory (Laboratory)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -299,7 +299,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Heart Health</td>
+	<td>label=Primate Heart Health (Service)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -324,7 +324,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate University of America</td>
+	<td>label=Primate University of America (University)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -349,7 +349,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Health Check</td>
+	<td>label=Primate Health Check (Event)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
