--- a/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
+++ b/utilities/acceptance-tests/suites/AddNonPersonThings/CreateEvent.html
@@ -536,7 +536,7 @@
 <tr>
 	<td>select</td>
 	<td>objectVar</td>
-	<td>label=Primate Health Check</td>
+	<td>label=Primate Health Check (Event)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -662,7 +662,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Health and Fitness</td>
+	<td>label=Primate Health and Fitness (Invited Talk)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -707,7 +707,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Primate Happenings</td>
+	<td>label=Primate Happenings (Blog Posting)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
