Holly committed final changes to test cases for rc-1.

--- a/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
+++ b/utilities/acceptance-tests/suites/AddPublications/ValidateFields.html
@@ -951,7 +951,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Mouse, Minnie</td>
+	<td>label=Mouse, Minnie (Person)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -1938,7 +1938,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Nintendo: Good or Bad for Kids?</td>
+	<td>label=Nintendo: Good or Bad for Kids? (Book)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -2004,7 +2004,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Kids Now Conference Proceedings</td>
+	<td>label=Kids Now Conference Proceedings (Chapter)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -2383,7 +2383,7 @@
 <tr>
 	<td>select</td>
 	<td>id=objectVar</td>
-	<td>label=Focus on Kids!</td>
+	<td>label=Focus on Kids! (Conference)</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
