--- a/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
+++ b/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
@@ -113,6 +113,11 @@
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
 	<td></td>
 </tr>
+<tr>
+	<td>pause 100000</td>
+	<td></td>
+	<td></td>
+</tr>
 <!--Change range of Echo Foxtrot-->
 <tr>
 	<td>clickAndWait</td>
@@ -208,6 +213,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause 100000</td>
+	<td></td>
 	<td></td>
 </tr>
 <!--Now remove individual boosting-->
@@ -310,6 +320,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause 100000</td>
+	<td></td>
 	<td></td>
 </tr>
 <!--Logout-->
