--- a/utilities/acceptance-tests/suites/MultiLabels/ManageLabels.html
+++ b/utilities/acceptance-tests/suites/MultiLabels/ManageLabels.html
@@ -133,6 +133,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertConfirmation</td>
+	<td>Are you sure you wish to delete this label?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextNotPresent</td>
 	<td>Furter, Frank Edit Remove</td>
 	<td></td>
@@ -171,6 +181,16 @@
 <tr>
 	<td>click</td>
 	<td>link=Remove</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertConfirmation</td>
+	<td>Are you sure you wish to delete this label?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForPageToLoad</td>
+	<td>5000</td>
 	<td></td>
 </tr>
 <tr>
