Holly committed final test case changes

--- a/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
+++ b/utilities/acceptance-tests/suites/AddRoles/GrantDisplay.html
@@ -276,6 +276,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertTitle</td>
 	<td>Faculty, Jane</td>
 	<td></td>
@@ -345,6 +350,11 @@
 <tr>
 	<td>click</td>
 	<td>link=Return to Profile Page</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
