--- a/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
+++ b/utilities/acceptance-tests/suites/CheckVisualizations/AddCoInvestigators.html
@@ -572,7 +572,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=(GraphML File)</td>
+	<td>link=GraphML file</td>
 	<td></td>
 </tr>
 <tr>
