--- a/utilities/acceptance-tests/suites/MultiLabels/AddTestFaculty.html
+++ b/utilities/acceptance-tests/suites/MultiLabels/AddTestFaculty.html
@@ -108,8 +108,8 @@
 </tr>
 <!--Pause allows time to get the N#### for the next step-->
 <tr>
-	<td>pause 10000</td>
-	<td></td>
+	<td>pause</td>
+	<td>20000</td>
 	<td></td>
 </tr>
 <!--Logout-->
