--- a/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
+++ b/utilities/acceptance-tests/suites/SearchBoost/TestIndividualBoost.html
@@ -113,9 +113,10 @@
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
 	<td></td>
 </tr>
+<!--Make sure Foxtrot is in middle of search results-->
 <tr>
-	<td>pause 100000</td>
-	<td></td>
+	<td>pause</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--Change range of Echo Foxtrot-->
@@ -215,9 +216,10 @@
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
 	<td></td>
 </tr>
+<!--Foxtrot should now be first-->
 <tr>
-	<td>pause 100000</td>
-	<td></td>
+	<td>pause</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--Now remove individual boosting-->
@@ -322,9 +324,10 @@
 	<td>Jenkins, Iris Faculty Member Emeritus</td>
 	<td></td>
 </tr>
+<!--Foxtrot should be back in the middle-->
 <tr>
-	<td>pause 100000</td>
-	<td></td>
+	<td>pause</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <!--Logout-->
