--- a/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
+++ b/utilities/acceptance-tests/suites/CreatePeople/EditFacultyInfo.html
@@ -732,8 +732,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>css=a.edit-freetextKeyword &gt; img.edit-individual</td>
+	<td>css=a.add-freetextKeyword &gt; img.add-individual</td>
 	<td></td>
 </tr>
 <tr>
